updates to webiste

--- a/index.html
+++ b/index.html
@@ -8,33 +8,59 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<body>
-
-<div class="header headerContainer">
-    <div class="logoItem">
-        AGP
+<body style="margin: 0;">
+<div class="bg">
+    <div class="header headerContainer">
+        <div class="logoItem">
+            AGP
+        </div>
+    <div class="navItem">
+        <a href="">Today's Picks</a>
+        <a href="">About AGP</a>
+        <a href="">Contact Us</a>
     </div>
-   <div class="navItem">
-    <a href="">Today's Picks</a>
-    <a href="">About AGP</a>
-    <a href="">Contact Us</a>
-   </div>
+    </div>
 </div>
-
 <div class="hero">
-<h1>Welcome to Anson's Gameday Picks!</h1>
-<p>
-Come check out Anson's picks for upcoming games! Use his advice to make game day picks in NFL football and NBA basketball, and more!
-</p>
+    <div class="leftHero">
+        <h1 class="heroText">Welcome to Anson's Gameday Picks!</h1>
+        <p>
+        Come check out Anson's picks for upcoming games! Use his advice to make game day picks in NFL football and NBA basketball, and more!
+        </p>
 
-<button class="callToAction">
-    Sign Up
-</button>
+        <button class="callToAction">
+        Sign Up
+        </button>
+    </div>
 
-<img src="" alt="Cheering while watching TV">
+    <div class="rightHero">
+        <img class="imgHero" src="https://media.istockphoto.com/id/1222073245/photo/football-fans-celebrating-a-victory-in-stadium.jpg?s=612x612&w=0&k=20&c=E5LgKIQ5gl_9k-jYYr2gQ7wJqaEhwlaYwfNz6yBaDjo=" alt="Cheering while watching TV">
+    </div>
 </div>
 
-<div class="footer"> 
+<div class= "preview">
+    <h2>Today's Top Picks</h2>
+    <div class="dailyPick">
+        <div class="pick">
+            <img src="https://cdn.nba.com/logos/nba/1610612737/primary/D/logo.svg" alt="pic 1">
+            <p>Charlotte @ Atlanta</p>
+        </div>
+        <div class="pick" >
+            <img src="https://cdn.nba.com/logos/nba/1610612739/primary/D/logo.svg" alt="pic 2">
+            <p>San Antonio at Cleveland</p>
+        </div>
+        <div class="pick">
+            <img src="https://cdn.nba.com/logos/nba/1610612754/primary/D/logo.svg" alt="pic 3">
+            <p>Utah @ Indiana</p>
+        </div>
+        <div class="pick"> 
+            <img src="https://cdn.nba.com/logos/nba/1610612748/primary/D/logo.svg" alt="pic 4">
+            <p>Denver @ Miami</p>
+        </div>
+    </div>
+</div>
+
+<div class="footer">
 <p>Copyright Anson's Gameday Pick's 2023</p>
 </div>
 
