added call to action section

--- a/index.html
+++ b/index.html
@@ -42,27 +42,55 @@
     <h2>Today's Top Picks</h2>
     <div class="dailyPick">
         <div class="pick">
-            <img src="https://cdn.nba.com/logos/nba/1610612737/primary/D/logo.svg" alt="pic 1">
+            <img class="team" src="https://cdn.nba.com/logos/nba/1610612737/primary/D/logo.svg" alt="pic 1">
             <p>Charlotte @ Atlanta</p>
         </div>
         <div class="pick" >
-            <img src="https://cdn.nba.com/logos/nba/1610612739/primary/D/logo.svg" alt="pic 2">
+            <img class="team" src="https://cdn.nba.com/logos/nba/1610612739/primary/D/logo.svg" alt="pic 2">
             <p>San Antonio at Cleveland</p>
         </div>
         <div class="pick">
-            <img src="https://cdn.nba.com/logos/nba/1610612754/primary/D/logo.svg" alt="pic 3">
+            <img class="team" src="https://cdn.nba.com/logos/nba/1610612754/primary/D/logo.svg" alt="pic 3">
             <p>Utah @ Indiana</p>
         </div>
         <div class="pick"> 
-            <img src="https://cdn.nba.com/logos/nba/1610612748/primary/D/logo.svg" alt="pic 4">
+            <img class="team" src="https://cdn.nba.com/logos/nba/1610612748/primary/D/logo.svg" alt="pic 4">
             <p>Denver @ Miami</p>
         </div>
     </div>
 </div>
 
-<div class="footer">
-<p>Copyright Anson's Gameday Pick's 2023</p>
+<div class="quote">
+    <p class="quoteText">
+        Anson's GameDay Picks is a completely fictional webpage created during a landing page project. All picks on this page are not up to date or accurate. Anson is not liable for any losses occured from these picks.
+    </p>
+    <div class="author"> 
+        <h5 class="leftA">
+            -Anson K
+        </h5>
+    </div>    
 </div>
+
+<div class="actionContainer">
+    <div class="callToActionSection">
+        <div class="divLeft">
+            <p>Call to action! It's time to subscribe!</p>
+            <p>Sing up for our daily picks here</p> 
+        </div>
+        <div class="divRight">
+            <button class="callToAction">Sign Up</button>
+        </div>
+        
+    </div>
+</div>
+
+
+<div class="bg">
+    <div class="footer">
+        <p>Copyright Anson's Gameday Pick's 2023</p>
+    </div>
+</div>
+
 
 </body>
 </html>
