visually the page looks good

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <div class="actionContainer">
     <div class="callToActionSection">
         <div class="divLeft">
-            <p>Call to action! It's time to subscribe!</p>
-            <p>Sing up for our daily picks here</p> 
+            <p class="lineOne">Call to action! It's time to subscribe!</p>
+            <p class="lineTwo">Sign up for our daily picks here. We promise not to spam you with emails. Just one email a day with the picks you are looking for.</p> 
         </div>
         <div class="divRight">
             <button class="callToAction">Sign Up</button>
